[tool.poetry]
name = "flask-security"
version = "3.0.1"
description =""" Flask-Security is an opinionated Flask extension which adds basic
  security and authentication features to your Flask apps quickly
  and easily"""
authors = ["Matt Wright <matt@nobien.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.5"
Flask='>=1.0.2'
Flask-Login='>=0.4.1'
Flask-Mail='>=0.9.1'
Flask-Principal='>=0.4.0'
Flask-WTF='>=0.14.2'
Flask-BabelEx='>=0.9.3'
itsdangerous='>=1.1.0'
passlib='>=1.7'
pyqrcode='>=1.2'
onetimepass='>=1.0.1'


[tool.poetry.dev-dependencies]
autopep8 = ">=1.4"
pylint = ">=2.3"
Flask-CLI = '>=0.4.0'
Flask-Mongoengine = '>=0.9.5'
Flask-Peewee = '>=0.6.5'
Flask-SQLAlchemy = '>=2.4'
bcrypt = '>=3.1'
# msgcheck = '>=2.9'
check-manifest = '>=0.25'
coverage = '>=4.0'
isort = '>=4.2.2'
mock = '>=1.3.0'
mongoengine = '>=0.12.0'
pony = '>=0.7.4'
pydocstyle = '>=1.0.0'
pytest-cache = '>=1.0'
pytest-cov = '>=2.7.0'
pytest-flakes = '>=4.0'
pytest-pep8 = '>=1.0.6'
pytest = '>=3.3.0'
sqlalchemy = '>=1.1.0'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
